source/css/eventSponsors.css
.dContainer{
    display: flex;
    justify-content: center;
    padding-bottom: 100px;
}

.sT{
    background-color: #f2f2f2;
    border-radius: 15px;
    height: 80px;
    margin-bottom: 50px;
    font-weight: 600;
}

.perkAndFormGrid{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 100px 250px 150px 1fr;
}

.superSponsorContainer{
    display: grid;
    grid-template-columns: 20px 1fr 20px;
    grid-template-rows: 20px 1fr 20px;
    border: solid 5px #3c2d73;
    background-color: #e7e1fd;
}

.sponsorContainer{
    grid-column: 2;
    grid-row: 2;
    display: grid;
    grid-template-rows: 1fr 258px 1fr 1fr;
}

.sponsorBoxTitleFlex{
    display: flex;
    align-items: center;
    font-size: 30px;
    padding-top: 40px;
}

.fieldContainer{
    display: grid;
    grid-template-rows: 66px 66px 126px;
    grid-template-columns: minmax(140px, auto) minmax(140px, auto);
}

textarea{
    resize: none;
    font-style: italic;
    grid-column: 1/3;
    font-weight: 600;
    border: 0;
    border-left: solid 1px;
    border-right: solid 1px;
    border-bottom: solid 1px;
}

input{
    font-style: italic;
    font-weight: 600;
}

input::placeholder, textarea::placeholder{
    font-size: 16px;
}

input[type=text], textarea[type=text]{
    padding-left: 10px;
}

textarea[type=text]{
    padding-top: 20px;
    font-size: 18px;
}

.b1{
    border-top: solid 1px;
    border-left: solid 1px;
    border-right: solid 1px;
}

.b2{
    border-top: solid 1px;
    border-right: solid 1px;
}

.b3{
    border-left: solid 1px;
    border-right: solid 1px;
}

.b4{
    border-right: solid 1px;
}

.horizontalEnd{
    display: flex;
    justify-content: flex-end;
}

.captcha{
    background-color: lightgrey;
    width: 200px;
    height: 80%;
}

.formButton{
    background-color: #3c2d73;
    color: white;
    width: 200px;
    height: 80%;
}

.mScontainer2{
    width: unset;
}

@media screen and (min-width: 1200px){
    
    .perkAndFormGrid{
        display: grid;
        grid-template-columns: 20% 5% 75%;
        grid-template-rows: 150px 410px 120px 1fr;
    }

    .superSponsorContainer{
        grid-column: 3;
        grid-row: 1/4;
    }

    .instructions{
        grid-row: 3;
    }

    .perks{
        grid-column: 1;
        grid-row: 2;
    }
}

